--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit&display=swap");
+
+@font-face {
+  font-family: "KENIA";
+  src: url("/fonts/KENIA/Kenia-Regular.ttf");
+  
+}
+@font-face {
+  font-family: "Comfortaa";
+  src: url("/fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf");
+}
+
+@font-face {
+  font-family: "SixCaps";
+  src: url("/fonts/Six_Caps/SixCaps-Regular.ttf");
+}
 html,
 body {
   padding: 0;
