--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,6 @@
 @font-face {
   font-family: "KENIA";
   src: url("/fonts/KENIA/Kenia-Regular.ttf");
-  
 }
 @font-face {
   font-family: "Comfortaa";
@@ -22,8 +21,18 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    Fira Sans,
+    Droid Sans,
+    Helvetica Neue,
+    sans-serif;
 }
 
 a {
