--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,8 @@
 }
 html,
 body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   padding: 0;
   margin: 0;
   font-family:
@@ -33,6 +35,10 @@ body {
     Droid Sans,
     Helvetica Neue,
     sans-serif;
+    
+}
+::-webkit-scrollbar {
+  display: none;
 }
 
 a {
