--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit&display=swap");
 
 @font-face {
-  font-family: "KENIA";
+  font-family: "Kenia";
   src: url("/fonts/Kenia/Kenia-Regular.ttf");
 }
 @font-face {
@@ -16,6 +16,10 @@
 @font-face {
   font-family: "SixCaps";
   src: url("/fonts/Six_Caps/SixCaps-Regular.ttf");
+}
+@font-face {
+  font-family: "Existence";
+  src: url("/fonts/existence/Existence.ttf");
 }
 html,
 body {
@@ -44,6 +48,13 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+* {
+  font-family: Existence;
+}
+p, input,textarea {
+  font-family: Outline;
 }
 
 * {
